test_scripts/errors/int_list_fail.stderr
 1 | int([]);
     ^^^^^^^
Error: Cannot convert list to int
